# agsjoy

./: .gitignore  CMakeLists.txt  LICENSE
src/: API.cpp  API.h  CMakeLists.txt  Joystick.cpp  Joystick.h  Joystick_.cpp  Joystick_dx8.cpp  Joystick_linux.cpp  Joystick_mm.cpp  Joystick_sdl.cpp  agsplugin.cpp  version.h  version.rc
test/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
